# fiap_tc01_churn

./: .gitignore  Makefile  README.md  pyproject.toml  tasks.ps1
data/interim/: telco_clean.parquet
docs/: architecture.md  ml_canvas.md  model_card.md  monitoring.md
notebooks/: 01_eda.ipynb  02_modelos.ipynb
src/churn_predictor/: config.py
src/churn_predictor/api/: inference.py  main.py  middleware.py  schemas.py
src/churn_predictor/data/: loader.py
src/churn_predictor/features/: preprocessing.py
src/churn_predictor/models/: baseline.py  dataset.py  mlp.py
src/churn_predictor/utils/: logging.py
tests/: conftest.py  test_api.py  test_schema.py  test_smoke.py
