[project]
name = "churn-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Raphael Lima", email = "raphafl@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = ["python-dotenv (>=1.2.2,<2.0.0)", "structlog (>=25.5.0,<26.0.0)", "colorama (>=0.4.6,<0.5.0)", "pandas (>=2.2,<3.0.0)", "numpy (>=2.4.4,<3.0.0)", "pyarrow (>=14.0.0,<24.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "joblib (>=1.5.3,<2.0.0)", "torch (>=2.11.0,<3.0.0)", "mlflow (>=3.11.1,<4.0.0)", "fastapi (>=0.136.1,<0.137.0)", "uvicorn[standard] (>=0.46.0,<0.47.0)", "pydantic (>=2.13.3,<3.0.0)"]

[tool.poetry]
packages = [{ include = "churn_predictor", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandera (>=0.31.1,<0.32.0)",
    "ruff (>=0.15.12,<0.16.0)"
]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pandera.*",
    "ignore::DeprecationWarning:mlflow.*",
]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (vars nao usadas, imports faltando)
    "I",   # isort (ordem de imports)
    "B",   # flake8-bugbear (bugs comuns)
    "UP",  # pyupgrade (sintaxe py312)
]
ignore = [
    "E501",  # line-too-long (delegado ao formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]              # asserts em testes ok
"notebooks/*" = ["E402", "F401"]  # imports tardios e nao usados em notebooks

[tool.ruff.format]
quote-style = "double"
indent-style = "space"